mise à jour gestion cartes
reste à faire : suppression et boutons modif/suppression dans la liste des cartes

--- a/codenames-3-web/WebContent/assets/css/cartes.css
+++ b/codenames-3-web/WebContent/assets/css/cartes.css
@@ -29,9 +29,9 @@ nav div ul li.active a:hover {
 	text-decoration: underline;
 }
 
-section[id="modifierCarte"]{
+/* section[id="modifierCarte"]{
 	display: none;
-}
+} */
 
 table thead {
 	background-color: rgb(124, 16, 16);
