--- a/codenames-3-web/WebContent/assets/css/cartes.css
+++ b/codenames-3-web/WebContent/assets/css/cartes.css
@@ -96,15 +96,31 @@ td input[value="Supprimer"]{
 	transition: all 0.25s ease;
 }
 
-td input[value="Valider"]{
+td input[id="ValiderModif"]{
  	display: none;
 	position: relative;
 	top: 0;
-	width: 100px;
+	width: 75px;
 	height: 25px;
 	padding: 0px 10px;
 	border-radius: 4px;
 	background: #78A419;
+	color: white;
+	border: none;
+	box-shadow: 1px 1px #EEE;
+	cursor: pointer;
+	transition: all 0.25s ease;
+}
+
+td input[id="cancel"]{
+ 	display: none;
+	position: relative;
+	top: 0;
+	width: 75px;
+	height: 25px;
+	padding: 0px 10px;
+	border-radius: 4px;
+	background: #f00000;
 	color: white;
 	border: none;
 	box-shadow: 1px 1px #EEE;
@@ -124,5 +140,10 @@ td input[value="Valider"]{
 	-moz-border-radius: 4px;
 }
 
+.col1{
+	width:60px;
+}
 
-
+.col3{
+	text-align: right;
+}
