--- a/codenames-3-web/WebContent/assets/css/cartes.css
+++ b/codenames-3-web/WebContent/assets/css/cartes.css
@@ -1,3 +1,10 @@
+img{
+	background-position: right center;;
+	background-repeat: no-repeat;
+	width: 70px;
+	height: auto;
+}
+
 h1 {
 	color: rgb(124,16,16)
 }
@@ -138,6 +145,11 @@ td input[id="cancel"]{
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
+}
+
+td br{
+	position: relative;
+	top: 10px;
 }
 
 .col1{
