--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/form-carte.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/form-carte.html
@@ -25,18 +25,18 @@
 				<!-- Menu à proprement parler -->
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="index.html">Connexion</a></li>
-						<li class="nav-item active"><a class="nav-link" href="cartes.html">Gestion des cartes</a></li>
-						<li class="nav-item"><a class="nav-link" href="plateau.html">Jouer</a></li>
+						<li class="nav-item"><a class="nav-link" href="accueil">Connexion</a></li>
+						<li class="nav-item active"><a class="nav-link" href="carte">Gestion des cartes</a></li>
+						<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
 					</ul>
 				</div>
 				<img class="avatar" src="images/codenames-logopng.png"/>
 			</nav>
 		<h1 class="text-center">Saisie d'une carte</h1>
-		
+		<p></p>
 		<section class="container" id="erreurSaisieCarte">
 			<div th:if="${carte != null}">
-			<div th:errors="${carte.libelle}"></div>
+				<div th:errors="${carte.libelle}"></div>
 			</div>
 		</section>
 		
@@ -53,7 +53,7 @@
 				<div class="form-group row">
 					<div class="col-sm-2"></div>
 					<div class="col-sm-10">
-						<input type="submit" value="Ajouter"/>
+						<input class="btn btn-sucess" type="submit" value="Ajouter"/>
 					</div>
 				</div>
 
