--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/liste-cartes.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/liste-cartes.html
@@ -26,9 +26,9 @@
 			<!-- Menu à proprement parler -->
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="index.html">Connexion</a></li>
-					<li class="nav-item active"><a class="nav-link" href="cartes.html">Gestion des cartes</a></li>
-					<li class="nav-item"><a class="nav-link" href="plateau.html">Jouer</a></li>
+					<li class="nav-item"><a class="nav-link" href="accueil">Connexion</a></li>
+					<li class="nav-item active"><a class="nav-link" href="cartes">Gestion des cartes</a></li>
+					<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
 				</ul>
 			</div>
 			<img class="avatar" src="images/codenames-logopng.png"/>
@@ -36,8 +36,11 @@
 		<header>
 			<h1 class="text-center">Gestion des cartes</h1>
 		</header>
+		<p></p>
 		<section class="container" id="ajouterCarte">
-			<p><button><a href="carte/ajouter">Ajouter une carte</a></button></p>
+			<p>
+				<a href="carte/ajouter" class="btn btn-sucess" role="button">Ajouter une carte</a>
+			</p>
 		</section>
 		
 		<section class="container" id="listeCartes">
@@ -49,8 +52,7 @@
 					<tr>
 						<th class="col1">id</th>
 						<th>Nom</th>
-						<th></th>
-						<th></th>
+						<th class="col3"></th>
 					</tr>
 				</thead>
 				<!-- Contenu du tableau -->
@@ -58,8 +60,10 @@
 					<tr th:each="carte : ${cartes}">
 						<td class="col1">[[${ carte.id }]]</td>
 						<td>[[${ carte.libelle }]]</td>
-						<td><a th:href="@{carte/editer/{id}(id=${ carte.id })}">Editer</a></td>
-						<td><a th:href="@{carte/supprimer/{id}(id=${ carte.id })}">Supprimer</a></td>
+						<td class="col3">
+							<a th:href="@{carte/editer/{id}(id=${ carte.id })}" class="btn btn-info" role="button">Editer</a>
+							<a th:href="@{carte/supprimer/{id}(id=${ carte.id })}" class="btn btn-danger" role="button">Supprimer</a>
+						</td>
 					</tr>
 				</tbody>
 			</table>
