Gestion de la connexion + création d'une page d'accueil avec règles
connexion joueur et connexion utilisateur

--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/form-carte.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/form-carte.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
-				<a class="navbar-brand" href="index.html">Accueil</a>
+				<a class="navbar-brand" href="accueil.html">Accueil</a>
 				<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarNav" aria-controls="navbarNav"
@@ -25,9 +25,9 @@
 				<!-- Menu à proprement parler -->
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="accueil">Connexion</a></li>
 						<li class="nav-item active"><a class="nav-link" href="carte">Gestion des cartes</a></li>
 						<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
+						<li class="nav-item"><a class="nav-link" href="accueil">Déconnexion</a></li>
 					</ul>
 				</div>
 				<img class="avatar" src="images/codenames-logopng.png"/>
