--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/accueil.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/accueil.html
@@ -1,59 +1,78 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="ISO-8859-1">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="assets/css/index.css" />
-<link rel="icon"
-	href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
-<title>Codenames Bienvenue</title>
-</head>
-<body>
-
-
-	<div class="container">
-
-		<form id="milieu1">
-			<h1>Bienvenue chez Codenames!</h1>
-
-			<small class="text-muted">Connectez-vous pour lancer une
-				partie!</small>
-
-			<div class="form-group">
-				<label for="exampleInputEmail1">Adresse Email</label> <input
-					type="email" class="form-control" id="exampleInputEmail1"
-					aria-describedby="emailHelp" placeholder="Email"> <a
-					href="inscription.html">Pas inscrit? Inscrivez-vous ici!</a>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="ISO-8859-1" />
+		<title>Code Names</title>
+		<base href="/codenames-3-web2/" />
+		<meta name="Description" content="Jouez à code names">
+		<!-- <base href="/codenames-3-web/"> -->
+		<link rel="stylesheet" 
+				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+				crossorigin="anonymous" >
+		<link rel="stylesheet" type="text/css" href="assets/css/regles.css" />
+		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg">
+			<a class="navbar-brand active" href="accueil">Accueil</a>
+			<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNav" aria-controls="navbarNav"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<!-- Menu à proprement parler -->
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item"><a class="nav-link" href="carte">Gestion des cartes</a></li>
+					<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
+					<li class="nav-item"><a class="nav-link" href="accueil">Déconnexion</a></li>
+				</ul>
 			</div>
-			<div class="form-group">
-				<label for="exampleInputPassword1">Mot de passe</label> <input
-					type="password" class="form-control" id="exampleInputPassword1"
-					placeholder="mot de passe">
-			</div>
-			<a class=" enregistrer btn btn-success" href="cartes.html">Connexion</a>
-			<!-- <button type="submit" class="btn btn-primary" onclick="connexion(); return false;">Connexion</button> -->
-		</form>
-	</div>
-	<footer class="container fixed-bottom"> Copyright codenames.fr
-		&copy; 2019 </footer>
-
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
-
-	<script src="assets/js/index.js"></script>
-</body>
+			<img class="avatar" src="images/codenames-logopng.png"/>
+		</nav>
+		<header>
+			<h1 class="text-center">Règles du jeu</h1>
+		</header>
+		<div id="regles">
+			<p>
+				<img class="avatar" src="images/Codenames_regles-1.png"/> 
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-2.png"/> 
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-3.png"/>
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-4.png"/> 
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-5.png"/> 
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-6.png"/> 
+			</p>
+			<p>
+				<img class="avatar" src="images/Codenames_regles-7.png"/> 
+			</p>
+		</div>
+		
+		<footer class="container">
+			Copyright codenames.fr &copy; 2019
+		</footer>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" 
+			integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" 
+			crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" 
+			integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" 
+			crossorigin="anonymous">
+		</script>
+	</body>
 </html>
