--- a/codenames-3-web2/src/main/webapp/assets/css/cartes.css
+++ b/codenames-3-web2/src/main/webapp/assets/css/cartes.css
@@ -1,5 +1,5 @@
 img{
-	background-position: right center;;
+	background-position: right center;
 	background-repeat: no-repeat;
 	width: 70px;
 	height: auto;
