--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/accueil.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/accueil.html
@@ -11,12 +11,12 @@
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
 				crossorigin="anonymous" >
-		<link rel="stylesheet" type="text/css" href="assets/css/regles.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/accueil.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand active" href="accueil">Accueil</a>
+			<a class="navbar-brand" href="accueil.html">Accueil</a>
 			<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarNav" aria-controls="navbarNav"
@@ -28,7 +28,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="carte">Gestion des cartes</a></li>
 					<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
-					<li class="nav-item"><a class="nav-link" href="accueil">Déconnexion</a></li>
+					<li class="nav-item"><a class="nav-link" href="connexion">Déconnexion</a></li>
 				</ul>
 			</div>
 			<img class="avatar" src="images/codenames-logopng.png"/>
@@ -36,7 +36,7 @@
 		<header>
 			<h1 class="text-center">Règles du jeu</h1>
 		</header>
-		<div id="regles">
+		<section class="container" id="regles">
 			<p>
 				<img class="avatar" src="images/Codenames_regles-1.png"/> 
 			</p>
@@ -56,9 +56,9 @@
 				<img class="avatar" src="images/Codenames_regles-6.png"/> 
 			</p>
 			<p>
-				<img class="avatar" src="images/Codenames_regles-7.png"/> 
+				<img id="finRegles"class="avatar" src="images/Codenames_regles-7.png"/> 
 			</p>
-		</div>
+		</section>
 		
 		<footer class="container">
 			Copyright codenames.fr &copy; 2019
