--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/connexionAdmin.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/connexionAdmin.html
@@ -10,7 +10,7 @@
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 				crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="assets/css/accueil.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/connexion.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
@@ -49,11 +49,11 @@
 				</div>
 				<div>
 					<input class="btn btn-sucess"  type="submit" value="Connexion"/>
-					<a href="accueil" class="btn btn-sucess float-right" role="button">Retour</a>
+					<a href="connexion" class="btn btn-sucess float-right" role="button">Retour</a>
 				</div>
 			</form>
 		</div>
-		<footer class="container"> 
+		<footer class="container fixed-bottom"> 
 			Copyright codenames.fr &copy; 2019 
 		</footer>
 	
@@ -66,6 +66,5 @@
 			integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 			crossorigin="anonymous">
 		</script>
-	
 	</body>
 </html>
