--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/liste-cartes.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/liste-cartes.html
@@ -28,7 +28,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item active"><a class="nav-link" href="carte">Gestion des cartes</a></li>
 					<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
-					<li class="nav-item"><a class="nav-link" href="accueil">Déconnexion</a></li>
+					<li class="nav-item"><a class="nav-link" href="connexion">Déconnexion</a></li>
 				</ul>
 			</div>
 			<img class="avatar" src="images/codenames-logopng.png"/>
