--- a/codenames-3-web2/src/main/webapp/assets/css/accueil.css
+++ b/codenames-3-web2/src/main/webapp/assets/css/accueil.css
@@ -5,6 +5,14 @@ nav img{
 	height: auto;
 }
 
+h1 {
+	color: rgb(124,16,16)
+}
+
+h2 {
+	color: rgb(166,42,19);
+}
+
 nav {
 	background-color: rgb(124, 16, 16);
 }
@@ -27,48 +35,15 @@ nav div ul li.active a:hover {
 	text-decoration: underline;
 }
 
-img[id="connexionImg"]{
-	background-position: center;
-	background-repeat: no-repeat;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-#connexion {
- 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-h1 {
-	/* color: rgb(140, 24, 20); */
-	color: rgb(124,16,16)
-}
-
-h2 {
-	color: rgb(166,42,19);
-}
-
-/* form input[type="submit"]  */
-.btn-sucess{	
+img{
 	position: relative;
-	top: 0;
-	padding: 10px 20px;
-	border-radius: 4px;
-	background: rgb(124, 16, 16);
-	color: white;
-	border: none;
-	box-shadow: 1px 1px #EEE;
-	cursor: pointer;
-	transition: all 0.25s ease;
+	width: 600px;
+	height: auto;
+	top: auto;
+	left: 50%;
+	transform: translate(-50%, 5%);
 }
 
-/* form input[type="submit"]:hover  */
-.btn-sucess:hover{
-	top: -5px;
-	background: rgb(166,42,19);
-	box-shadow: 4px 4px #EEE;
+img[id="finRegles"]{
+	margin-bottom : 40px;
 }
