--- a/codenames-3-web2/src/main/webapp/WEB-INF/templates/plateau.html
+++ b/codenames-3-web2/src/main/webapp/WEB-INF/templates/plateau.html
@@ -14,7 +14,7 @@
 <title>Codenames</title>
 </head>
 <body>
-
+<div th:attr="data-role_id=${role}" ></div>
 	<div class="container">
 
 		<div id="message" class="alert alert-primary" role="alert">
@@ -30,35 +30,35 @@
 				<table class="table table-borderless" id="table">
 					<tr>
 						<td th:each="i : ${#numbers.sequence(0, 4)}">
-							<button id="button" type="button"
+							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
 								class="btn btn-secondary btn-block"
 								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(5, 9)}">
-							<button id="button" type="button"
+							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
 								class="btn btn-secondary btn-block"
 								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(10, 14)}">
-							<button id="button" type="button"
+							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
 								class="btn btn-secondary btn-block"
 								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(15, 19)}">
-							<button id="button" type="button"
-								class="btn btn-secondary btn-block" th:classappend=""
+							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
+								class="btn btn-secondary btn-block" 
 								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(20, 24)}">
-							<button id="button" type="button"
+							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
 								class="btn btn-secondary btn-block"
 								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
 						</td>
@@ -145,7 +145,7 @@
 				codenames.fr 2019 </footer>
 			
 
-			<script src="assets/js/plateau.js"></script>
+			
 			<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 				crossorigin="anonymous"></script>
@@ -159,15 +159,7 @@
 				integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
 				crossorigin="anonymous"></script>
 				
-				<script>
-				
-				function ClickAllButtons()
-				 var buttons = document.getElementsByName('button');
-					if([[${role}]]==0){
-					jQuery('button').click();
-					}
-				});
-			</script>
+	<script src="assets/js/plateau.js"></script>
 		</div>
 	</div>
 
