--- a/codenamesSpringBoot/src/main/resources/templates/accueil.html
+++ b/codenamesSpringBoot/src/main/resources/templates/accueil.html
@@ -4,9 +4,8 @@
 	<head>
 		<meta charset="ISO-8859-1" />
 		<title>Code Names</title>
-		<base href="/codenames-3-web2/" />
+		<!-- <base href="/codenames/" /> -->
 		<meta name="Description" content="Jouez à code names">
-		<!-- <base href="/codenames-3-web/"> -->
 		<link rel="stylesheet" 
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
