--- a/codenamesSpringBoot/src/main/resources/templates/admin.html
+++ b/codenamesSpringBoot/src/main/resources/templates/admin.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Code Names</title>
-		<base href="/codenames-3-web2/" />
+		<!-- <base href="/codenames/" /> -->
 		<meta name="Description" content="Jouez à code names">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" 
