--- a/codenamesSpringBoot/src/main/resources/templates/connexion.html
+++ b/codenamesSpringBoot/src/main/resources/templates/connexion.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Code Names</title>
-		<base href="/codenames-3-web2/" />
+		<!-- <base href="/codenames/" /> -->
 		<meta name="Description" content="Jouez à code names">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" 
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 				crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="assets/css/connexion.css" />
+		<link rel="stylesheet" type="text/css" href="/css/connexion.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
@@ -29,7 +29,8 @@
 		</section>
 		<div class="container" >
 			<img id=connexionImg class="avatar" src="images/codenames-logopng.png"/>
-			<form method="POST" id="connexion" >
+			<form method="POST" id="connexion" action="perform_login" >
+				<input type="hidden" th:name="${ _csrf.parameterName }" th:value="${ _csrf.token }" />
 				<h1>Bienvenue chez Codenames!</h1>
 				<span class="text-muted">Connectez-vous pour lancer une partie!</span>
 				<a class="float-right" href="inscription">Inscription</a>
@@ -38,12 +39,12 @@
 				<div class="form-group">
 					<label class="col-form-label">Nom d'utilisateur : </label>
 					<div>
-						<input name="userName" type="text" class="form-control" id="connexionInputUsername" placeholder="nom d'utilisateur"/>
+						<input name="username" type="text" class="form-control" id="connexionInputUsername" placeholder="nom d'utilisateur"/>
 						<span>[[${msgUser}]]</span><br/>
 					</div>
 						
 					<label class="col-form-label">Mot de passe : </label> 
-					<input name="pwd" type="password" class="form-control" id="connexionInputPassword" placeholder="mot de passe">
+					<input name="password" type="password" class="form-control" id="connexionInputPassword" placeholder="mot de passe">
 					<p>[[${msgPwd}]]</p>
 				</div>
 				<div>
