--- a/codenamesSpringBoot/src/main/resources/templates/form-carte.html
+++ b/codenamesSpringBoot/src/main/resources/templates/form-carte.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Code Names</title>
-		<base href="/codenames-3-web2/" />
+		<!-- <base href -->="/codenames/" />
 		<meta name="Description" content="Jouez à code names">
 		<link rel="stylesheet" 
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
