--- a/codenamesSpringBoot/src/main/resources/templates/liste-cartes.html
+++ b/codenamesSpringBoot/src/main/resources/templates/liste-cartes.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="ISO-8859-1" />
 		<title>Code Names</title>
-		<base href="/codenames-3-web2/" />
+		<!-- <base href="/codenames/" /> -->
 		<meta name="Description" content="Jouez à code names">
 		<!-- <base href="/codenames-3-web/"> -->
 		<link rel="stylesheet" 
