--- a/codenamesSpringBoot/src/main/resources/templates/cartes.html
+++ b/codenamesSpringBoot/src/main/resources/templates/cartes.html
@@ -9,7 +9,7 @@
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
 				crossorigin="anonymous" >
-		<link rel="stylesheet" type="text/css" href="assets/css/cartes.css" />
+		<link rel="stylesheet" type="text/css" href="/css/cartes.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
@@ -30,7 +30,7 @@
 					<li class="nav-item"><a class="nav-link" href="plateau.html">Jouer</a></li>
 				</ul>
 			</div>
-			<img class="avatar" src="img/codenames-logopng.png"/>
+			<img class="avatar" src="/imgages/codenames-logopng.png"/>
 		</nav>
 		<header>
 			<h1 class="text-center">Gestion des cartes</h1>
