--- a/codenamesSpringBoot/src/main/resources/templates/accueil.html
+++ b/codenamesSpringBoot/src/main/resources/templates/accueil.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
@@ -32,17 +31,17 @@
 			</div>
 			<img class="avatar" src="images/codenames-logopng.png"/>
 		</nav>
+		
 		<header>
+			<p sec:authorize="hasRole('ROLE_USER')" class="text-center">
+				Bonjour utilisateur !
+			</p>
+	
+			<p sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">
+				Bonjour Admin !
+			</p>
 			<h1 class="text-center">Regles du jeu</h1>
 		</header>
-		
-		<p sec:authorize="hasRole('ROLE_USER')">
-			Bonjour utilisateur !
-		</p>
-
-		<p sec:authorize="hasRole('ROLE_ADMIN')">
-			Bonjour Admin !
-		</p>
 		
 		<section class="container" id="regles">
 			<p>
