--- a/codenamesSpringBoot/src/main/resources/templates/accueil.html
+++ b/codenamesSpringBoot/src/main/resources/templates/accueil.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="accueil.html">Accueil</a>
+			<a class="navbar-brand" href="accueil">Accueil</a>
 			<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarNav" aria-controls="navbarNav"
