--- a/codenamesSpringBoot/src/main/resources/templates/form-carte.html
+++ b/codenamesSpringBoot/src/main/resources/templates/form-carte.html
@@ -4,18 +4,17 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Code Names</title>
-		<!-- <base href -->="/codenames/" />
 		<meta name="Description" content="Jouez à code names">
 		<link rel="stylesheet" 
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
 				crossorigin="anonymous" >
-		<link rel="stylesheet" type="text/css" href="assets/css/cartes.css" />
+		<link rel="stylesheet" type="text/css" href="/css/cartes.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
-				<a class="navbar-brand" href="accueil.html">Accueil</a>
+				<a class="navbar-brand" href="accueil">Accueil</a>
 				<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarNav" aria-controls="navbarNav"
@@ -30,7 +29,7 @@
 						<li class="nav-item"><a class="nav-link" href="connexion">Déconnexion</a></li>
 					</ul>
 				</div>
-				<img class="avatar" src="images/codenames-logopng.png"/>
+				<img class="avatar" src="/images/codenames-logopng.png"/>
 			</nav>
 		<h1 class="text-center">Saisie d'une carte</h1>
 		<p></p>
@@ -42,6 +41,7 @@
 		
 		<section class="container" id="saisieCartes">
 			<form method="POST">
+				<input type="hidden" th:name="${ _csrf.parameterName }" th:value="${ _csrf.token }" />
 				<!-- Nom de la carte -->
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label">Le nom de la carte :</label>
@@ -59,7 +59,7 @@
 
 			</form>
 		</section>
-		<footer class="container">
+		<footer class="container fixed-bottom">
 			Copyright codenames.fr &copy; 2019
 		</footer>
 		
