--- a/codenamesSpringBoot/src/main/resources/templates/connexion.html
+++ b/codenamesSpringBoot/src/main/resources/templates/connexion.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <!DOCTYPE html>
 	<head>
-		<meta charset="ISO-8859-1">
+		<meta charset="UTF-8">
 		<title>Code Names</title>
-		<meta name="Description" content="Jouez à code names">
+		<meta name="Description" content="Jouez Ã  code names">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" 
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -13,13 +13,7 @@
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg">
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-				</ul>
-			</div>
-			<img class="avatar" src="/images/codenames-logopng.png"/>
-		</nav>
+		<div th:replace="navigationConnexion" ></div>
 		<section class="container" id="erreurIdentificationJoueur">
 			<div th:if="${joueur != null}">
 				<div th:errors="${joueur.username}"></div>
