couleur des cases cachée

--- a/codenamesSpringBoot/src/main/resources/templates/nouvellePartie.html
+++ b/codenamesSpringBoot/src/main/resources/templates/nouvellePartie.html
@@ -20,6 +20,7 @@
 		<div id="milieu">
 			<h1>Créer une nouvelle partie</h1>
 			<form method="post">
+				<input type="hidden" th:name="${ _csrf.parameterName }" th:value="${ _csrf.token }" />
 				<input type="hidden" value="2" name="joueur.id"> Choisissez
 				votre équipe <select class="custom-select" name="equipe">
 					<option selected>Choisissez votre équipe</option>
@@ -43,31 +44,6 @@
 
 				</select> <input type="submit" value="OK">
 			</form>
-
-
-
-			<div id="myModal" class="modal fade" role="dialog">
-				<div class="modal-dialog">
-
-					<!-- Modal content-->
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal">&times;</button>
-							<h4 class="modal-title">Modal Header</h4>
-						</div>
-						<div class="modal-body">
-							<p>Some text in the modal.</p>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Close</button>
-						</div>
-
-					</div>
-
-				</div>
-			</div>
-
 
 			<footer class="container fixed-bottom"> Copyright
 				codenames.fr 2019 </footer>
