--- a/codenamesSpringBoot/src/main/resources/templates/plateau.html
+++ b/codenamesSpringBoot/src/main/resources/templates/plateau.html
@@ -2,19 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<base href="/codenames/" />
+
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<base href="/codenames/" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
-<base href="/codenames/" />
+
 <link rel="icon"
 	href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 <title>Codenames</title>
 </head>
 <body>
-<div th:attr="data-role_id=${role}" ></div>
+	<div th:attr="data-role_id=${role}"></div>
+
 	<div class="container">
 
 		<div id="message" class="alert alert-primary" role="alert">
@@ -25,42 +29,71 @@
 
 		<h1>Equipe [[${equipe}]]</h1>
 		<div id="milieu">
-
+			<input type="hidden" th:name="${ _csrf.parameterName }"
+				th:value="${ _csrf.token }" />
 			<div th:if="${cases != null}">
 				<table class="table table-borderless" id="table">
 					<tr>
+
 						<td th:each="i : ${#numbers.sequence(0, 4)}">
-							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
-								class="btn btn-secondary btn-block"
-								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(5, 9)}">
-							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
-								class="btn btn-secondary btn-block"
-								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
-						</td>
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(10, 14)}">
-							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
-								class="btn btn-secondary btn-block"
-								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(15, 19)}">
-							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
-								class="btn btn-secondary btn-block" 
-								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
 						</td>
 					</tr>
 					<tr>
 						<td th:each="i : ${#numbers.sequence(20, 24)}">
-							<button th:attr="data-col_id=${cases[i].couleur}" type="button"
-								class="btn btn-secondary btn-block"
-								th:onclick="showColor(event,[[${cases[i].couleur}]])">[[${cases[i].carte.libelle}]]</button>
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
 						</td>
 					</tr>
 				</table>
@@ -143,9 +176,9 @@
 
 			<footer class="container fixed-bottom"> Copyright
 				codenames.fr 2019 </footer>
-			
 
-			
+
+
 			<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 				crossorigin="anonymous"></script>
@@ -158,8 +191,8 @@
 				src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
 				integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
 				crossorigin="anonymous"></script>
-				
-	<script src="assets/js/plateau.js"></script>
+
+			<script src="/js/plateau.js"></script>
 		</div>
 	</div>
 
