--- a/codenamesSpringBoot/src/main/resources/static/css/accueil.css
+++ b/codenamesSpringBoot/src/main/resources/static/css/accueil.css
@@ -1,10 +1,3 @@
-nav img{
-	background-position: right center;
-	background-repeat: no-repeat;
-	width: 70px;
-	height: auto;
-}
-
 h1 {
 	color: rgb(124,16,16)
 }
@@ -13,29 +6,7 @@ h2 {
 	color: rgb(166,42,19);
 }
 
-nav {
-	background-color: rgb(124, 16, 16);
-}
-
-nav a, nav div ul li a {
-	color: rgb(243, 242, 240);
-	position: relative;
-	text-decoration: none;
-}
-
-nav div ul li.active a {
-	text-decoration: underline;
-}
-
-nav a:hover {
-	color: rgb(209, 93, 4);
-}
-
-nav div ul li.active a:hover {
-	text-decoration: underline;
-}
-
-img{
+section img{
 	position: relative;
 	width: 600px;
 	height: auto;
@@ -44,6 +15,6 @@ img{
 	transform: translate(-50%, 5%);
 }
 
-img[id="finRegles"]{
+section img[id="finRegles"]{
 	margin-bottom : 40px;
 }
