--- a/codenamesSpringBoot/src/main/resources/templates/navigation.html
+++ b/codenamesSpringBoot/src/main/resources/templates/navigation.html
@@ -9,11 +9,11 @@
 				href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 				integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 				crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="/css/connexion.css" />
+		<link rel="stylesheet" type="text/css" href="/css/navigation.css" />
 		<link rel="icon" href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 	</head>
 	<body>
-			<nav class="navbar navbar-expand-lg">
+		<nav class="navbar navbar-expand-lg">
 			<a class="navbar-brand" href="accueil">Accueil</a>
 			<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -24,13 +24,13 @@
 			<!-- Menu a proprement parler -->
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="carte">Gestion des cartes</a></li>
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link" href="joueurs">Gestion des joueurs</a></li>
-					<li class="nav-item"><a class="nav-link" href="plateau">Jouer</a></li>
-					<li class="nav-item"><a class="nav-link" href="connexion">Deconnexion</a></li>
+					<li class="nav-item"><a class="nav-link" href="/carte">Gestion des cartes</a></li>
+					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link" href="/joueur">Gestion des joueurs</a></li>
+					<li class="nav-item"><a class="nav-link" href="/plateau">Jouer</a></li>
+					<li class="nav-item"><a class="nav-link" href="/deconnexion">Deconnexion</a></li>
 				</ul>
 			</div>
-			<img class="avatar" src="images/codenames-logopng.png"/>
+			<img class="avatar" src="/images/codenames-logopng.png"/>
 		</nav>
 	</body>
 
