--- a/codenamesSpringBoot/src/main/resources/templates/plateau.html
+++ b/codenamesSpringBoot/src/main/resources/templates/plateau.html
@@ -17,6 +17,7 @@
 <title>Codenames</title>
 </head>
 <body>
+	<div th:replace="navigation" ></div>
 	<div th:attr="data-role_id=${role}"></div>
 
 	<div class="container">
