--- a/codenamesSpringBoot/src/main/resources/templates/plateauDevineur.html
+++ b/codenamesSpringBoot/src/main/resources/templates/plateauDevineur.html
@@ -15,6 +15,7 @@
 		<header>
 			<h1 class="text-center">C'est à vous!</h1>
 		</header>
+		<div th:replace="navigation" ></div>
 		<div class="container">
 			<select class="custom-select" id="taille" onchange="getMots()">
 				<option selected>Choisissez la taille du plateau</option>
