--- a/codenamesSpringBoot/src/main/resources/templates/navigation.html
+++ b/codenamesSpringBoot/src/main/resources/templates/navigation.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="accueil">Accueil</a>
+			<a class="navbar-brand" href="/accueil">Accueil</a>
 			<!-- Bouton "hamburger" qui s'active si l'écran est trop petit -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarNav" aria-controls="navbarNav"
@@ -26,7 +26,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="/carte">Gestion des cartes</a></li>
 					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link" href="/joueur">Gestion des joueurs</a></li>
-					<li class="nav-item"><a class="nav-link" href="/plateau">Jouer</a></li>
+					<li class="nav-item"><a class="nav-link" href="/partie">Jouer</a></li>
 					<li class="nav-item"><a class="nav-link" href="/deconnexion">Deconnexion</a></li>
 				</ul>
 			</div>
