--- a/codenamesSpringBoot/src/main/resources/templates/nouvellePartie.html
+++ b/codenamesSpringBoot/src/main/resources/templates/nouvellePartie.html
@@ -8,12 +8,13 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
-<base href="/codenames/" />
+<!-- <base href="/codenames/" /> -->
 <link rel="icon"
 	href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 <title>Codenames</title>
 </head>
 <body>
+	<div th:replace="navigation" ></div>
 	<div class="container">
 
 
