--- a/codenamesSpringBoot/src/main/resources/templates/partie.html
+++ b/codenamesSpringBoot/src/main/resources/templates/partie.html
@@ -2,19 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<base href="/codenames/" />
+<base href="/codenames/"/>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
-<base href="/codenames/" />
+<!-- <base href="/codenames/" /> -->
 <link rel="icon"
 	href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
 <title>Codenames</title>
 </head>
 <body>
+	<div th:replace="navigation" ></div>
 	<div class="container">
 
 
