Affichage des messages du chat

--- a/codenames-angular/codenamesAngular/src/app/app.component.html
+++ b/codenames-angular/codenamesAngular/src/app/app.component.html
@@ -1,1 +1,10 @@
+
+<nav class="navbar navbar-expand-lg">
+		<ul>
+      <li><a [routerLink]="['/jeu']" routerLinkActive="active">Lien vers le jeu</a></li>
+      <li><a [routerLink]="['/plateau']" routerLinkActive="active">Lien vers le plateau</a></li>
+      <li><a [routerLink]="['/chat']" routerLinkActive="active">Lien vers le chat</a></li>
+		</ul>
+</nav>
+
 <router-outlet></router-outlet>
