--- a/codenames-angular/codenamesAngular/src/app/chat/chat.component.css
+++ b/codenames-angular/codenamesAngular/src/app/chat/chat.component.css
@@ -1,10 +1,39 @@
 #affichageChat{
   width: 50%;
-  height: 50%;
-  overflow: scroll;
+  height: 500px;
+  overflow: auto;
+  border-style:solid;
+  border-width:2px;
+  border-color:black;
+  margin-bottom : 30px;
+}
+
+#chat_list {
+  border-bottom: 1px solid blue;
+  margin: 0;
+  padding: 18px 16px 10px;
+}
+
+#joueur {
+  font-style: italic;
+  font-size: smaller;
+}
+
+#message {
+  font-size:medium;
+  color: white;
+  width: 70%;
+  border-radius: 5px;
+  padding: 3px 10px;
+  background: rgb(124, 16, 16);
 }
 
 #saisieMessage {
   width: 50%;
+  height: 50%;
+}
+
+input[id="contenu"]{
+  width: 75%;
   height: 50%;
 }
